src/vbucket.h
@@ -456,7 +456,7 @@ private:
 
     Mutex hpChksMutex;
     std::list<HighPriorityVBEntry> hpChks;
-    volatile size_t numHpChks; // size of list hpChks (to avoid MB-9434)
+    AtomicValue<size_t> numHpChks; // size of list hpChks (to avoid MB-9434)
     KVShard *shard;
 
     static size_t chkFlushTimeout;
